# gradescope-api

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: main.yaml
docs/: CONTRIBUTING.md  INSTALL.md  TESTING.md
src/gradescopeapi/: __main__.py
src/gradescopeapi/_config/: config.py
src/gradescopeapi/api/: api.py  app.py
src/gradescopeapi/api/routes/: auth.py  course.py
src/gradescopeapi/classes/: _data_model.py  account.py  assignments.py  connection.py  courses.py  extensions.py
src/gradescopeapi/classes/_helpers/: _assignment_helpers.py  _course_helpers.py
tests/: conftest.py  custom_skips.py  test_connection.py  test_courses.py  test_edit_assignment.py  test_extension.py  test_submission.py  test_upload.py
